styles/controllers/grid/stageParticipant.less
/** 
 * @file styles/controllers/grid/stageParticipant.less
 *
 * Copyright (c) 2003-2012 John Willinsky
 * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
 * 
 * @ingroup pkp_controllers_grid
 *
 * @brief Classes for stage participant grid.
 */
 
div#stageParticipantGridContainer {
	tr.category td {
		height: 26px;
		font-size: 100%;
		text-transform: none !important;
		font-family: inherit !important;
	}
	
	thead {
		display:none;
	}
	
	.pkp_controllers_grid {
		margin-top: 0px;
	}
		
	div.pkp_controllers_grid .row_file {
		margin-top: 0px;
	}
	
	div.pkp_controllers_grid .row_container .row_actions,
	div.pkp_controllers_grid .row_container,
	div.pkp_controllers_grid tr.gridRow td {
		height: 25px;
	}
	
	div.pkp_controllers_grid .row_actions a:before {
		margin-top: 1px;
	}
	
	div.pkp_controllers_grid div.actions {
		margin:0px;
	}
	
	.category_placeholder {
		display:none !important;
	}
}

